changed to hashrouter

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aleksns.github.io/space-brawl",
+  "homepage": "https://aleksns.github.io/space-brawl/",
   "name": "space-brawl",
   "version": "0.1.0",
   "private": true,
